[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratus-sdk-py"
version = "0.0.2"
description = "Official Python SDK for Stratus X1 - M-JEPA-G world model integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Formation", email = "sdk@stratus.run"}
]
keywords = [
    "ai",
    "embeddings",
    "compression",
    "world-model",
    "m-jepa-g",
    "trajectory-prediction",
    "agent-planning",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://stratus.run"
Documentation = "https://docs.stratus.run/sdk"
Repository = "https://github.com/formthefog/stratus-sdk-py"
Issues = "https://github.com/formthefog/stratus-sdk-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stratus_sdk*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
